<resources>
    <string name="app_name">Movie night</string>
    <string name="movie_title">Title</string>
    <string name="category">Category: </string>
    <string name="overview">Overview: </string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="genres">Genres:</string>
    <string name="language">Language:</string>
    <string name="quote">Quote:</string>
    <string name="adult">watching under parents supervision!</string>
    <string name="family">family movie</string>
    <string name="default_image">jorgjEk6a0bed6jdR5wu4S6ZvRm.jpg</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="movie_rate_hint">Rate this movie from 0.5 to 10.0</string>
    <string name="submit_rating">submit rating</string>
    <string name="go_to_chat_room">Go to chat room</string>
    <string name="message">Message</string>
    <string name="user_name">user name</string>
    <string name="sned">sned</string>
    <string name="logout">Logout</string>
    <string name="username">UserName</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_rating">your rate must be within 0.5 to 10.0</string>
    <string name="submit_rating_msg">Your rating has been submitted successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>